--- a/styles/style.css
+++ b/styles/style.css
@@ -146,10 +146,6 @@ button:hover
         margin-left: auto;
         margin-right: auto;
     }
-    .tab_body
-    {
-        color: darkred;
-    }
 }
 
 /*************************** SCREEN WIDTH - 1276  ***************************/
@@ -180,6 +176,14 @@ button:hover
     .horizontal_wrap
     {
         margin-top: 15px;
+    }
+    .tab_header
+    {
+        width: 396px;
+    }
+    .tab_body
+    {
+        width: 396px;
     }
 }
 
